<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.settings.SettingsFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="70dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/weightInfoText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/fonzie"
                    android:text="@string/weightInfoTextString"
                    android:textColor="@color/cals"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                    android:id="@+id/weightInput"
                    android:layout_width="58dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:fontFamily="@font/fonzie"
                    android:gravity="center"
                    android:inputType="number"
                    android:singleLine="true"
                    android:text="80"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/weightInfoText"/>

            <TextView
                    android:id="@+id/kgText"
                    android:layout_width="43dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/fonzie"
                    android:text="@string/kg"
                    android:textColor="@color/cals"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/weightInput"
                    app:layout_constraintTop_toBottomOf="@+id/weightInfoText"
                    tools:text="@string/kg"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipChildren="false">

            <TextView
                    android:id="@+id/proteinsInfoText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/fonzie"
                    android:text="@string/proteinsAmountInfoText"
                    android:textColor="@color/proteins"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <SeekBar
                    android:id="@+id/proteinsAmountSeekBar"
                    android:layout_width="323dp"
                    android:layout_height="27dp"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="@color/text"
                    android:indeterminate="false"
                    android:max="100"
                    android:progress="66"
                    android:progressTint="@color/proteins"
                    android:thumb="@drawable/proteins_thumb"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/proteinsInfoText"/>

            <TextView
                    android:id="@+id/proteinsAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/fonzie"
                    android:text="2.2"
                    android:textColor="@color/text"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.501"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/proteinsAmountSeekBar"/>

            <TextView
                    android:id="@+id/proteinsTextgPerKg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/fonzie"
                    android:text="@string/proteinsgPerKg"
                    android:textColor="@color/proteins"
                    app:layout_constraintStart_toEndOf="@+id/proteinsAmount"
                    app:layout_constraintTop_toBottomOf="@+id/proteinsAmountSeekBar"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false">

            <TextView
                    android:id="@+id/caloriesInfoText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/fonzie"
                    android:text="@string/caloriesAmountInfoText"
                    android:textColor="@color/cals"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <SeekBar
                    android:id="@+id/caloriesAmountSeekBar"
                    android:layout_width="323dp"
                    android:layout_height="27dp"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="@color/text"
                    android:indeterminate="false"
                    android:max="100"
                    android:progress="50"
                    android:progressTint="@color/cals"
                    android:thumb="@drawable/calories_thumb"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/caloriesInfoText"/>

            <TextView
                    android:id="@+id/caloriesAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/fonzie"
                    android:text="2500"
                    android:textColor="@color/text"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.501"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/caloriesAmountSeekBar"/>

            <TextView
                    android:id="@+id/caloriesTextgPerKg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/fonzie"
                    android:text="@string/kcal"
                    android:textColor="@color/cals"
                    app:layout_constraintStart_toEndOf="@+id/caloriesAmount"
                    app:layout_constraintTop_toBottomOf="@+id/caloriesAmountSeekBar"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>